[tool.poetry]
name = "contaiwaiter"
version = "0.1.1"
description = "Waits until systems in containers really come on-line and then signals it."
authors = ["Michal Bultrowicz <michal.bultrowicz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
async-timeout = "^3.0"
tenacity = "^5.0"
aredis = "^1.1"
env-var-config = "^0.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
ptpython = "^2.0"
pytest-docker-butla = "^0.7.0"
pytest = "^4.6"
requests = "^2.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
